frontend.err.log
[2m11:57:37 am[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/lib/api.js?t=1782454554947' does not provide an export named 'logout'
[2m11:57:37 am[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/context/AppContext.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m11:58:01 am[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useApp must be used within AppProvider
[39m > useApp src/context/AppContext.jsx:47:17
    45 |  
    46 |    const t = (key) => {
    47 |      const dict = translations[language] || translations.en
       |                   ^
    48 |      return dict[key] ?? translations.en[key] ?? key
    49 |    }
 > Navbar src/components/Navbar.jsx:12:62
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10

[2m11:58:01 am[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Navbar> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m12:01:39 pm[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useApp must be used within AppProvider
[39m > useApp src/context/AppContext.jsx:82:18
    80 |  export function useApp() {
    81 |    const ctx = useContext(AppContext)
    82 |    if (!ctx) throw new Error("useApp must be used within AppProvider")
       |                    ^
    83 |    return ctx
    84 |  }
 > Navbar src/components/Navbar.jsx?t=1782455498386:12:93
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10

[2m12:01:39 pm[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Navbar> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m12:01:39 pm[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useApp must be used within AppProvider
[39m > useApp src/context/AppContext.jsx:82:18
    80 |  export function useApp() {
    81 |    const ctx = useContext(AppContext)
    82 |    if (!ctx) throw new Error("useApp must be used within AppProvider")
       |                    ^
    83 |    return ctx
    84 |  }
 > Navbar src/components/Navbar.jsx?t=1782455498386:12:93
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10

[2m12:01:39 pm[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Navbar> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m12:01:39 pm[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useApp must be used within AppProvider
[39m > useApp src/context/AppContext.jsx:82:18
    80 |  export function useApp() {
    81 |    const ctx = useContext(AppContext)
    82 |    if (!ctx) throw new Error("useApp must be used within AppProvider")
       |                    ^
    83 |    return ctx
    84 |  }
 > Navbar src/components/Navbar.jsx:9:93
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10

[2m12:01:39 pm[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Navbar> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m12:01:39 pm[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useApp must be used within AppProvider
[39m > useApp src/context/AppContext.jsx:82:18
    80 |  export function useApp() {
    81 |    const ctx = useContext(AppContext)
    82 |    if (!ctx) throw new Error("useApp must be used within AppProvider")
       |                    ^
    83 |    return ctx
    84 |  }
 > Navbar src/components/Navbar.jsx:9:93
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10

[2m12:01:39 pm[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Navbar> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

